# simulateur_trafic

./: .coverage  pyproject.toml  setup.py  similateur.rar
.github/workflows/: ci.yml  release.yml
docs/: index.md
simulateur_trafic/models/: route.py
simulateur_trafic_ahmed_hamed_2025.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_feu_rouge.py  test_reseau.py  test_route.py  test_route_feu.py  test_simulateur.py  test_vehicule.py
tests/.pytest_cache/v/cache/: lastfailed  nodeids
