[tool.poetry]
name = "simulateur-trafic-ahmed-hamed-2025"
version = "1.0.0"
description = "A traffic simulation application"
authors = ["Your Name <email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "simulateur_trafic" }
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
matplotlib = ">=3.5.0"
numpy = ">=1.21.0"
pytest = ">=9.0.1,<10.0.0"
pytest-cov = ">=7.0.0,<8.0.0"

[tool.poetry.scripts]
simulateur-trafic = "simulateur_trafic.main:main"

[tool.poetry.urls]
homepage = "https://github.com/ahmedhdhd/simulateur_trafic"
repository = "https://github.com/ahmedhdhd/simulateur_trafic"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"